# rust-examples

./: .gitignore  LICENSE  Makefile  README.adoc
docs/: Makefile  (+11 more)
projects/actix-web/juniper-example/: Cargo.toml  README.adoc
projects/actix-web/juniper-example/src/: api.rs  main.rs  schema.rs
projects/collections/: Cargo.toml
projects/collections/array/src/: main.rs
projects/collections/binary-tree/: Cargo.toml  README.adoc
projects/collections/binary-tree/docs/: v1.adoc  v2.adoc
projects/collections/binary-tree/src/: lib.rs  main.rs  v1.rs  v2.rs
projects/collections/binary-tree/src/v1/: tests.rs
projects/collections/doubly-linked-list/: Cargo.toml  README.adoc  v1.adoc  v2.adoc
projects/collections/doubly-linked-list/src/: lib.rs  v1.rs  v2.rs
projects/collections/doubly-linked-list/src/v1/: tests.rs
projects/collections/doubly-linked-list/src/v2/: tests.rs
projects/collections/enum-list/: Cargo.toml  README.adoc
projects/collections/enum-list/src/: lib.rs
projects/collections/list/dlist-opt-rc-refcell/: Cargo.toml  README.adoc  v1.adoc  v2.adoc
projects/collections/list/dlist-opt-rc-refcell/src/: v1.rs  v2.rs
projects/collections/list/dlist-rc-opt-refcell/: Cargo.toml  README.adoc
projects/collections/list/dlist-rc-opt-refcell/src/: lib.rs  main.rs  tests.rs
projects/collections/list/dlist-rc-refcell-opt/: Cargo.toml  README.adoc
projects/collections/list/dlist-rc-refcell-opt/src/: lib.rs  main.rs  tests.rs
projects/collections/list/enum-list/: Cargo.toml  README.adoc
projects/collections/list/enum-list/src/: lib.rs
projects/collections/list/slist-box-enum-struct/: Cargo.toml  README.adoc
projects/collections/list/slist-box-enum-struct/src/: lib.rs  tests.rs
projects/collections/list/slist-box-enum-tuple/: Cargo.toml  README.adoc
projects/collections/list/slist-box-enum-tuple/src/: lib.rs  tests.rs
projects/collections/list/slist-opt-rc-refcell/: Cargo.toml
projects/collections/list/slist-opt-rc-refcell/docs/: v1.adoc  v2.adoc  v6.adoc
projects/collections/list/slist-opt-rc-refcell/src/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
projects/collections/list/slist-rc-enum/: Cargo.toml  README.adoc
projects/collections/list/slist-rc-enum/docs/: v1.adoc  v2.adoc
projects/collections/list/slist-rc-enum/src/: lib.rs  tests.rs
projects/collections/list/slist-refcell-opt-rc/: Cargo.toml  README.adoc
projects/collections/list/slist-refcell-opt-rc/src/: lib.rs
projects/collections/list/slist-unsafe/: Cargo.toml  README.adoc
projects/collections/list/slist-unsafe/src/: lib.rs  main.rs  tests.rs
projects/collections/list/slist-using-box/: Cargo.toml
projects/collections/ndarray/: Cargo.toml  README.adoc
projects/collections/ndarray/tests/: column_access_2d.rs  integration_test.rs  square_2d.rs  statistical_tests_1d.rs  statistical_tests_2d.rs  test_matrix_kxn_colvecs.rs  test_matrix_nxk_rowvecs.rs  various_access_1d.rs  various_access_2d.rs
projects/collections/singly-linked-list/: README.adoc  v1.adoc  v2.adoc  v3.adoc  v4.adoc  v5.adoc
projects/collections/singly-linked-list-opt-rc-refcell/docs/: v3.adoc  v4.adoc  v5.adoc
projects/collections/singly-linked-list-opt-rc-refcell/src/: v0.rs  v2.rs  v3.rs  v4.rs  v5.rs
projects/collections/singly-linked-list-refcell-opt-rc/: Cargo.toml  README.NoRefCell.adoc  README.adoc
projects/collections/singly-linked-list-refcell-opt-rc/src/: lib.rs  main.rs
projects/collections/singly-linked-list-unsafe/: README.adoc
projects/collections/singly-linked-list-unsafe/src/: lib.rs  tests.rs
projects/collections/singly-linked-list-using-box/: Cargo.toml  README.adoc
projects/collections/singly-linked-list-using-box/docs/: v1.adoc  v2.adoc
projects/collections/singly-linked-list-using-box/src/: v1.rs  v2.rs
projects/collections/singly-linked-list/docs/: v1.adoc  v2.adoc  v4.adoc  v5.adoc  v6.adoc
projects/collections/singly-linked-list/src/: lib.rs  main.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
projects/collections/tree/: README.adoc
projects/collections/tree/bt-cmd/: Cargo.toml  README.adoc
projects/collections/tree/bt-opt-rc/: Cargo.toml  README.adoc
projects/collections/tree/bt-opt-rc-refcell/: Cargo.toml  README.adoc
projects/collections/tree/bt-rc-refcell-opt/: Cargo.toml  README.adoc
projects/collections/tree/bt-refcell-children-opt-rc/: Cargo.toml  README.adoc
projects/collections/tree/bt-refcell-opt-rc/: Cargo.toml  README.adoc
projects/collections/vec/: Cargo.toml
projects/collections/vec/src/: main.rs
projects/collections/vec/tests/: vec_tests_1d.rs  vec_tests_2d.rs
projects/iterator/iterator-vec-demo/: Cargo.toml  README.adoc
projects/iterator/iterator-vec-demo/src/: test.rs
projects/ml/xor_regression/: Cargo.toml  README.adoc
projects/ml/xor_regression_scratch/: Cargo.toml  README.adoc
projects/ml/xor_regression_scratch/src/: lib.rs
projects/wasm/wasm-game-of-life/: Cargo.toml  LICENSE_MIT  index.html
projects/wasm/wasm-game-of-life/src/: lib.rs
projects/wasm/wasm-game-of-life/www/: package-lock.json  package.json  webpack.config.js
tutorials/chap09_02/: Cargo.toml  README.adoc
tutorials/chap09_02/src/: file_open_and_unwrap.rs  main.rs
tutorials/chap10/: .gitignore  Cargo.toml  Makefile  README.adoc
tutorials/chap10/chapter10/: Cargo.toml  README.adoc
tutorials/chap10/chapter10/src/: different_lifetimes.rs  largest_i32.rs  longest_str.rs  longest_with_an_announcement.rs  out_of_scope.rs
tutorials/chap10/largest/: Cargo.toml  README.adoc
tutorials/chap10/largest/src/: largest_gen.rs  largest_i32_char.rs  lib.rs
tutorials/chap10/point/: Cargo.toml  README.adoc
tutorials/chap10/point/src/: main.rs
tutorials/chap10/src/: largest_i32.rs  longest_str.rs
tutorials/chap10/summary-trait/: Cargo.toml  README.adoc
tutorials/chap10/summary-trait/src/: article.rs  lib.rs  main.rs  tweet.rs
tutorials/chap16/ch16-02-message-passing/: Cargo.toml  README.adoc
tutorials/chap16/ch16-02-message-passing/src/: main.rs
tutorials/strings/: Cargo.toml  README.adoc
tutorials/strings/src/: concat1.rs
(+460 files in other folders)
