[workspace]
members = [
    "list/dlist-opt-rc-refcell",
    "list/dlist-rc-opt-refcell",
    "list/dlist-rc-refcell-opt",
    "list/enum-list",
    "list/slist-box-enum-struct",
    "list/slist-box-enum-tuple",
    "list/slist-opt-rc-refcell",
    "list/slist-rc-enum",
    "list/slist-refcell-opt-rc",
    "list/slist-unsafe",
    "list/slist-using-box",
    "tree/bt-opt-rc",
    "tree/bt-opt-rc-refcell",
    "tree/bt-rc-refcell-opt",
    "tree/bt-refcell-children-opt-rc",
    "tree/bt-refcell-opt-rc",
]
