[package]
name = "chap09_02"
version = "0.1.0"
authors = ["unmyr <56982541+unmyr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "file_open_and_match"
path = "src/file_open_and_match.rs"

[[bin]]
name = "file_open_and_unwrap"
path = "src/file_open_and_unwrap.rs"

[[bin]]
name = "file_open_and_expect"
path = "src/file_open_and_expect.rs"

[[bin]]
name = "propagating_errors"
path = "src/propagating_errors.rs"

[[bin]]
name = "file_open_and_qop"
path = "src/file_open_and_qop.rs"

[dependencies]
