[package]
name = "strings"
version = "0.1.0"
authors = ["unmyr <56982541+unmyr@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "push_str"
path = "src/push_str.rs"

[[bin]]
name = "concat1"
path = "src/concat1.rs"

[dependencies]
