[package]
name = "juniper-example"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
actix-cors = "0.7.0"
actix-web-lab = "0.20.2"
env_logger = "0.11"
serde = "1.0.196"
serde_json = "1.0.44"
serde_derive = "1.0.196"
juniper = "0.15"
