[package]
name = "juniper-example"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12"
actix-cors = "0.7"
env_logger = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.17"
# See: https://github.com/time-rs/time/issues/693
time = ">= 0.3.38"
