[package]
name = "xor_regression"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
linfa = "0.8"
linfa-linear = "0.8"
ndarray = "0.16"
num-traits = "0.2"
plotters = "0.3"
rand = "0.9"
rand_distr = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
