[package]
name = "xor_regression_scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.*", features = ["derive"] }
linfa = "0.8"
linfa-linear = "0.8"
ndarray = { version = "0.16", features = ["serde"] }
num-traits = "0.2"
plotters = "0.3"
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
