[package]
name = "chap10"
version = "0.1.0"
authors = ["unmyr <56982541+unmyr@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "largest_i32"
path = "src/largest_i32.rs"

[[bin]]
name = "largest_generic"
path = "src/largest_generic.rs"

[[bin]]
name = "out_of_scope"
path = "src/out_of_scope.rs"

[[bin]]
name = "longest_str"
path = "src/longest_str.rs"

[[bin]]
name = "different_lifetimes"
path = "src/different_lifetimes.rs"

[[bin]]
name = "longest_with_an_announcement"
path = "src/longest_with_an_announcement.rs"

[dependencies]
