[package]
name = "ch16-02-message-passing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "send_a_single_message"
path = "src/send_a_single_message.rs"

[[bin]]
name = "send_multiple_messages"
path = "src/send_multiple_messages.rs"

[[bin]]
name = "creating_multiple_producers"
path = "src/creating_multiple_producers.rs"


[dependencies]
